force-app/main/default/objects/Feedback__c/Feedback__c.object-meta.xml
<CustomObject>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <label>Feedback</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Feedback No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedbacks</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>