force-app/main/default/objects/Feedback__c/fields/Current_User_is_Reporter__c.field-meta.xml
<CustomField>
    <fullName>Current_User_is_Reporter__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <formula>IF( $User.Id =  Reporter__r.Id , TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User is Reporter</label>
    <type>Checkbox</type>
</CustomField>