force-app/main/default/objects/Feedback__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>