force-app/main/default/objects/Feedback__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <formula>IF( OR(ISPICKVAL(Status__c, &quot;Delivered&quot;),ISPICKVAL(Status__c, &quot;Merged&quot;), ISPICKVAL(Status__c, &quot;Rejected&quot;)), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>