force-app/main/default/objects/Feedback__c/fields/Merged_In__c.field-meta.xml
<CustomField>
    <fullName>Merged_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <label>Merged In</label>
    <referenceTo>Feedback__c</referenceTo>
    <relationshipLabel>Merged Feedbacks</relationshipLabel>
    <relationshipName>MergedFeedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>