force-app/main/default/objects/Feedback__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <formula>IF( NOT(  Owner:Queue.DeveloperName   = &quot;SF_Project_Team&quot;),
HYPERLINK(&apos;/&apos; + OwnerId , Owner:User.FirstName + &quot; &quot; + Owner:User.LastName),
IF( ISPICKVAL($User.LanguageLocaleKey, &quot;de&quot;), &quot;SF Projektteam&quot;, &quot;SF Project Team&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>