force-app/main/default/objects/Feedback__c/fields/Planned_in_Release__c.field-meta.xml
<CustomField>
    <fullName>Planned_in_Release__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <label>Planned in Release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>