force-app/main/default/objects/Feedback__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <label>Record Link</label>
    <type>Url</type>
</CustomField>