force-app/main/default/objects/Feedback__c/fields/Reporter__c.field-meta.xml
<CustomField>
    <fullName>Reporter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <label>Reporter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>