force-app/main/default/objects/Feedback__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>