force-app/main/default/objects/Feedback__c/fields/User_Story_Link__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Link__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. SF-1083</description>
    <label>User Story Link</label>
    <type>Url</type>
</CustomField>