force-app/main/default/objects/Feedback__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>Feedback related to issues with existing functionality.</description>
    <label>Bug</label>
</RecordType>