force-app/main/default/objects/Feedback__c/recordTypes/Improvement.recordType-meta.xml
<RecordType>
    <fullName>Improvement</fullName>
    <active>true</active>
    <description>Feedback and ideas for non-existing functionalities.</description>
    <label>Improvement</label>
</RecordType>