force-app/main/default/objects/Feedback__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Object__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Closed__c</columns>
    <columns>Reporter__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Alle Feedbacks</label>
</ListView>