force-app/main/default/objects/Feedback__c/listViews/Alle_offenen_Fehler.listView-meta.xml
<ListView>
    <fullName>Alle_offenen_Fehler</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Object__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Closed__c</columns>
    <columns>Reporter__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Feedback__c.Bug</value>
    </filters>
    <filters>
        <field>Is_Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Alle offenen Fehler</label>
</ListView>