force-app/main/default/objects/Feedback__c/listViews/Meine_Feedbacks.listView-meta.xml
<ListView>
    <fullName>Meine_Feedbacks</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Object__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Closed__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Current_User_is_Reporter__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Meine erstellten Feedbacks</label>
</ListView>