force-app/main/default/objects/Feedback__c/listViews/Meine_offenen_Feedbacks.listView-meta.xml
<ListView>
    <fullName>Meine_offenen_Feedbacks</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Object__c</columns>
    <columns>Status__c</columns>
    <columns>Reporter__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Meine offenen Feedbacks (Inhaber)</label>
    <sharedTo>
        <group>SF_Project_Team</group>
    </sharedTo>
</ListView>