force-app/main/default/objects/Feedback__c/listViews/SF_Project_Team_Feedback.listView-meta.xml
<ListView>
    <fullName>SF_Project_Team_Feedback</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Object__c</columns>
    <columns>Status__c</columns>
    <columns>Is_Closed__c</columns>
    <columns>Reporter__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Queue</filterScope>
    <label>SF Projektteam</label>
    <queue>SF_Project_Team</queue>
    <sharedTo>
        <group>SF_Project_Team</group>
    </sharedTo>
</ListView>